Updated copy, resume, styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,10 +14,11 @@ body {
     margin: 1.5em auto;
     width: fit-content;
     color: #444;
+    text-align: center;
 }
 
 .body {
-    font-size: 1.5em;
+    font-size: 2em;
     margin: 5em auto;
     width: 80%;
     color: #666;
@@ -25,7 +26,7 @@ body {
 }
 
 .footer {
-    font-size: 1em;
+    font-size: 2em;
     margin: 1.5em auto;
     width: fit-content;
     color: #888;
